# cargo-configure

./: Cargo.toml  README.md  deny.toml  zuu.toml
config/: expert.toml  master.toml  novice.toml
src/: clippy.rs  main.rs
src/clippy/: absolute_path.rs  absurd_extreme_comparisons.rs  alloc_instead_of_core.rs  allow_attributes.rs  allow_attributes_without_reason.rs  almost_complete_range.rs  almost_swapped.rs  approx_constant.rs  arc_with_non_send_sync.rs  arithmetic_side_effects.rs  as_conversions.rs  as_ptr_cast_mut.rs  as_underscore.rs  assertions_on_constants.rs  assertions_on_result_states.rs  assign_op_pattern.rs  assigning_clones.rs  async_yields_async.rs  await_holding_invalid_type.rs  await_holding_lock.rs  await_holding_refcell_ref.rs  bad_bit_mask.rs  big_endian_bytes.rs  blanket_clippy_restriction_lints.rs  blocks_in_conditions.rs  bool_comparison.rs  core.rs  mod.rs  rc_clone_in_vec_init.rs
src/config/: generate.rs  mod.rs
src/lints/: mod.rs
