[package]
name = "cargo-configure"
version = "0.1.0"
description = "Configure a cargo project"
edition = "2021"
license = "AGPL-3.0"
keywords = ["cargo", "configure", "clippy", "teams"]
categories = ["development-tools"]
repository = "https://github.com/otechdo/cargo-configure"
authors = ["Willy Micieli"]
readme = "README.md"

[dependencies]
inquire = { version = "0.7.5", features = ["console"] }
